fix: blurry after scale in chrome

--- a/src/assets/styles/elements/graph.scss
+++ b/src/assets/styles/elements/graph.scss
@@ -43,7 +43,6 @@
 }
 
 #floormap {
-  will-change: translate, scale;
   &.active {
     .booth,
     .room {
